# basilisk-gfx

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  bsmod_hooks.json  generate.bat
basilisk/: CMakeLists.txt
basilisk-core/: CMakeLists.txt
basilisk-core/include/: basilisk-core.h  basilisk.h  bs_core.h  bs_internal.h  bs_mem.h  bs_types.h
basilisk-core/src/: bs_audio.c  bs_base64.c  bs_collision.c  bs_context.c  bs_core.c  bs_font.c  bs_images.c  bs_ini.c  bs_json.c  bs_log.c  bs_math.c  bs_mem.c  bs_memory.c  bs_models.c  bs_objects.c  bs_shaders.c  bs_trampoline.c  bs_validation.c  bs_window.c
basilisk-gen/: CMakeLists.txt
basilisk-gen/include/: bsgen_list.h  bsgen_string.h
basilisk-gen/src/: bsgen_list.c  bsgen_string.c  main.c
basilisk-gen/xml/: basilisk-core.xml  basilisk-core.xslt
basilisk-gfx/: CMakeLists.txt  bsgfx_contracts.h
basilisk-gfx/include/: basilisk-gfx.h  bsgfx.h  bsgfx_cache.h  bsgfx_internal.h
basilisk-gfx/shaders/: bsgfx.glsl
basilisk-gfx/src/: bsgfx.c  bsgfx_animator.c  bsgfx_collider.c  bsgfx_instance.c  bsgfx_material.c  bsgfx_pipeline.c  bsgfx_scene.c  bsgfx_shadows.c  bsgfx_ui.c  bsgfx_utils.c
basilisk-gfx/src/spawners/entity/: bsgfx_entity.c
basilisk-gfx/src/types/: bsgfx_foliage.c  bsgfx_light.c  bsgfx_prefab.c  bsgfx_primitive.c  bsgfx_spawner.c  bsgfx_tile.c  bsgfx_type.c  bsgfx_type.h
basilisk-gfx/src/types/foliage/: bsgfx_foliage.c
basilisk-gfx/src/types/light/: bsgfx_light.c
basilisk-gfx/src/types/prefab/: bsgfx_prefab.c
basilisk-gfx/src/types/primitive/: bsgfx_primitive.c
basilisk-gfx/src/types/spawner/: bsgfx_spawner.c
basilisk-gfx/src/types/tile/: bsgfx_tile.c
basilisk-gfx/src/ui/: bsgfx_ui.c  bsgfx_ui.h
basilisk-mod/: CMakeLists.txt
basilisk-mod/include/: basilisk-mod.h  bsmod_cache.h  bsmod_internal.h
basilisk-mod/src/: bsmod.c  bsmod_atlas.c  bsmod_biff.c  bsmod_bmfont.c  bsmod_bpak.c  bsmod_compile.c  bsmod_history.c  bsmod_lisk.c  bsmod_pipeline.c  bsmod_rasterize.c  bsmod_track.c  bsmod_transform.c  bsmod_type.c
basilisk-mod/src/ui/: bsmod_ui.c  bsmod_ui_context.c  bsmod_ui_grid.c  bsmod_ui_light.c  bsmod_ui_material.c  bsmod_ui_prefab.c  bsmod_ui_primitive.c  bsmod_ui_side.c  bsmod_ui_tile.c  bsmod_ui_type.c
basilisk-mod/src/ui/grid/: bsmod_ui_grid.c
basilisk-mod/src/ui/light/: bsmod_ui_light.c
basilisk-mod/src/ui/material/: bsmod_ui_material.c
basilisk-mod/src/ui/prefab/: bsmod_ui_prefab.c
basilisk-mod/src/ui/primitive/: bsmod_ui_primitive.c
basilisk-mod/src/ui/tile/: bsmod_ui_tile.c
basilisk-test/: CMakeLists.txt
basilisk-test-runner/: CMakeLists.txt
basilisk-test/include/: bstest_cache.h
basilisk-test/src/: bstest_bpak.c
basilisk/src/: main.c
content/: bsgfx.bpak  bsgfx_001.bpak  bsmod.bpak
xml/: basilisk-core.xml  basilisk-core.xslt  basilisk-gfx.xml  basilisk-mod.xml  basilisk.xslt  helpers.xsl  internal-header.xslt  internal.xslt  prevalidation-header.xslt  prevalidation.xslt  trampoline-header.xslt  trampoline.xslt  validation-header.xslt  variadic-string-declaration.xslt  variadic-string-definition.xslt
